rushmore/app/resources/css/marketing.css
/* ... */
.tutorial-controls-button:active {
    background-color: #5D1F19;
}

.tutorial-controls-button {
    width: 25%;
    height: 100%;
    text-align: center;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

#tutorial-progress-indicator {
    width: 50%;
    height: 100%;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.tutorial-lesson {
    height: 30%;
    width: 100%;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    font-size: 18px;
}

#lessons-container {
    width: 100%;
    height: 90%;
}

.tutorial-lesson img {
    height: 100px;
    width: auto;
}

.tutorial-text {
    width: 80%;
    text-align: center;
    margin-top: 50%; 
 }

.tutorial-title {
    width: 80%;
    text-align: center;
    font-size: 30px;
 }

 .tutorial-image {
    width: 40%;
 }

 .tutorial-image img {
    width: 100%;
    height: 100%;
 }

.tutorial-left {
    -webkit-flex-flow: row-reverse wrap;
        -ms-flex-flow: row-reverse wrap;
            flex-flow: row-reverse wrap;
}

#tutorial-progress-indicator {
    width: 30%;
    height: 100%;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: row wrap;
        -ms-flex-flow: row wrap;
            flex-flow: row wrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.tutorial-anim-page-slide-left{
    transition: 0.8s;
    -webkit-transform: translateX(-100%);
            transform: translateX(-100%);
}

.tutorial-anim-page-slide-right{
    transition: 0.8s;
    -webkit-transform: translateX(100%);
            transform: translateX(100%);
}

.tutorial-anim-page-slide-in-left{
    -webkit-animation:0.8s anim-page-slide-in-left;
            animation:0.8s anim-page-slide-in-left;
    position: absolute;
    top: 0px;height:90%;
}

.tutorial-anim-page-slide-in-right{
    -webkit-animation: 0.8s anim-page-slide-in-right;
            animation: 0.8s anim-page-slide-in-right;
    position: absolute;
    top: 0px;height:90%;
}

@-webkit-keyframes anim-page-slide-in-left {
    0% {-webkit-transform: translateX(100%);transform: translateX(100%)}
    100% {-webkit-transform: translateX(0%);transform: translateX(0%)}
}

@keyframes anim-page-slide-in-left {
    0% {-webkit-transform: translateX(100%);transform: translateX(100%)}
    100% {-webkit-transform: translateX(0%);transform: translateX(0%)}
}

@-webkit-keyframes anim-page-slide-in-right {
    0% {-webkit-transform: translateX(-100%);transform: translateX(-100%)}
    100% {-webkit-transform: translateX(0%);transform: translateX(0%)}
}

@keyframes anim-page-slide-in-right {
    0% {-webkit-transform: translateX(-100%);transform: translateX(-100%)}
    100% {-webkit-transform: translateX(0%);transform: translateX(0%)}
}

.tutorial-progress-dot {
    border-radius: 50%;
    width: 10px;
    height: 10px;    
    background-color: grey;
}

.tutorial-progress-dot-active {
    background-color: white;
}

#lobby-container{
    top: 0;
    overflow-y: scroll; 
    height: 100%;
    width: 100%;
    display: block;
    overflow: auto;
    padding: 0px 0px 0px 0px;
}

#lobby-container ul {
    list-style-type: none;
    padding-left: 0px;
}

#lobby-container h1 {
    list-style-type: none;
    padding-left: 0px;
    /*padding-top: 10px;*/
    font-size: 20px;
    color: white;
    letter-spacing: 0.05em;
    opacity: 1;
    font-weight: 100;
}

#lobby-container li {
    list-style-type: none;
    padding-left: 0px;
    padding-bottom: 5px;
    font-size: medium;
    color: white;
    letter-spacing: 0.05em;
}

#lobby-footer {
    width: 100%;
    height: 20vh;
    position: fixed;
    top: 80vh;
    left: 0;
    /*background-color: red;*/
    color: white;
    font-size: x-large;
    border: none;
    font-family: inherit;
    box-shadow: 0px 0px 6px 5px rgba(0,0,0,0.2);
}

#lobby-footer.enabled:focus {    
    background-color: #37955E !important;
}
#lobby-footer.enabled:active {    
    background-color: #37955E !important;
}

#lobby-footer.disabled:focus {    
    background-color: #787878 !important;
}
#lobby-footer.disabled:active {    
    background-color: #787878 !important;
}

#lobby-footer.enabled {
    background-color: #26a65b;
}

#lobby-footer.disabled {
    background-color: grey;
}

#blue-team-lobby-header{
    background: #446CB3;
    padding: 10px;
    min-height: 40vh;
}

#red-team-lobby-header{
    background: #D91E18;
    padding: 10px;
    min-height: 40vh;
}

#game-container {
    height: 90%;
    top: 50px;
    position: absolute;
    width: 100%;
    bottom: 100%;
}
/* ... */

